--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "@dmhtoo/random-int",
-  "version": "1.0.1",
+  "name": "random-rgba",
+  "version": "1.0.0",
   "author": "Dave Held <dav3h3ld@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fauteuil/random-int.git"
+    "url": "git+https://github.com/fauteuil/random-rgba.git"
   },
   "main": "index.js",
   "keywords": [
     "random",
-    "integer",
-    "math"
+    "color",
+    "rgba"
   ],
   "license": "MIT",
-  "description": "### Generate a random integer in Javascript (ES6), within a given range.  This package is based on [an example from the W3Schools Javascript Random page](https://www.w3schools.com./js/js_random.asp \"W3Schools JavaScript Random\").",
+  "description": "### Generate a random rgba color string, using an optional opacity (alpha) value",
   "bugs": {
-    "url": "https://github.com/fauteuil/random-int/issues"
+    "url": "https://github.com/fauteuil/random-rgba/issues"
   },
-  "homepage": "https://github.com/fauteuil/random-int#readme",
-  "dependencies": {},
+  "homepage": "https://github.com/fauteuil/random-rgba#readme",
+  "dependencies": {
+    "@dmhtoo/random-int": "^2.0.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
